parser.output
Terminals unused in grammar

   T_NEWLINE
   T_QUIT
   TLESS
   TGREAT


Grammar

    0 $accept: Program $end

    1 Program: START PROG_ID LBRACE Main RBRACE

    2 Main: Field_Declarations Statements

    3 Field_Declarations: Field_Declaration SEMI_COLON Field_Declarations
    4                   | %empty

    5 Field_Declaration: Type Def

    6 Def: IDENTIFIER TLSQUARE InExpression TRSQUARE
    7    | IDENTIFIER

    8 Location: IDENTIFIER TLSQUARE Expression TRSQUARE
    9         | IDENTIFIER

   10 InExpression: T_INT

   11 $@1: %empty

   12 Expression: Expression TPLUS $@1 Expression

   13 $@2: %empty

   14 Expression: Expression TMINUS $@2 Expression

   15 $@3: %empty

   16 Expression: Expression TMUL $@3 Expression

   17 $@4: %empty

   18 Expression: Expression TDIV $@4 Expression

   19 $@5: %empty

   20 Expression: Expression MOD $@5 Expression
   21           | Def
   22           | T_INT

   23 Expression_Right: NOT Expression_Right
   24                 | TMINUS Expression_Right

   25 $@6: %empty

   26 Expression_Right: Expression_Right TPLUS $@6 Expression_Right

   27 $@7: %empty

   28 Expression_Right: Expression_Right TMINUS $@7 Expression_Right

   29 $@8: %empty

   30 Expression_Right: Expression_Right TMUL $@8 Expression_Right

   31 $@9: %empty

   32 Expression_Right: Expression_Right TDIV $@9 Expression_Right

   33 $@10: %empty

   34 Expression_Right: Expression_Right MOD $@10 Expression_Right
   35                 | Location
   36                 | Bool
   37                 | T_INT

   38 Bool: TRUE
   39     | FALSE

   40 Statements: Statement SEMI_COLON Statements
   41           | %empty

   42 Statement: Location TEQUAL Expression_Right
   43          | CALLOUT TLROUND STRING_LITERAL TCOMMA Callout_Arg TRROUND

   44 Callout_Arg: Arguments
   45            | Arguments TCOMMA Callout_Arg

   46 Arguments: Literals
   47          | Expression_Right

   48 Type: INT
   49     | BOOLEAN

   50 Literals: CHAR_LITERAL
   51         | STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 10 22 37
IDENTIFIER (259) 6 7 8 9
STRING_LITERAL (260) 43 51
PROG_ID (261) 1
BOOLEAN (262) 49
CALLOUT (263) 43
INT (264) 48
TEQUAL (265) 42
TPLUS (266) 12 26
TMINUS (267) 14 24 28
TMUL (268) 16 30
TDIV (269) 18 32
NOT (270) 23
MOD (271) 20 34
RBRACE (272) 1
LBRACE (273) 1
T_NEWLINE (274)
T_QUIT (275)
START (276) 1
TLROUND (277) 43
TRROUND (278) 43
TLSQUARE (279) 6 8
TRSQUARE (280) 6 8
FALSE (281) 39
TRUE (282) 38
CHAR_LITERAL (283) 50
TLESS (284)
TGREAT (285)
SEMI_COLON (286) 3 40
TCOMMA (287) 43 45


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
Main (35)
    on left: 2, on right: 1
Field_Declarations (36)
    on left: 3 4, on right: 2 3
Field_Declaration (37)
    on left: 5, on right: 3
Def (38)
    on left: 6 7, on right: 5 21
Location (39)
    on left: 8 9, on right: 35 42
InExpression (40)
    on left: 10, on right: 6
Expression (41)
    on left: 12 14 16 18 20 21 22, on right: 8 12 14 16 18 20
$@1 (42)
    on left: 11, on right: 12
$@2 (43)
    on left: 13, on right: 14
$@3 (44)
    on left: 15, on right: 16
$@4 (45)
    on left: 17, on right: 18
$@5 (46)
    on left: 19, on right: 20
Expression_Right (47)
    on left: 23 24 26 28 30 32 34 35 36 37, on right: 23 24 26 28 30
    32 34 42 47
$@6 (48)
    on left: 25, on right: 26
$@7 (49)
    on left: 27, on right: 28
$@8 (50)
    on left: 29, on right: 30
$@9 (51)
    on left: 31, on right: 32
$@10 (52)
    on left: 33, on right: 34
Bool (53)
    on left: 38 39, on right: 36
Statements (54)
    on left: 40 41, on right: 2 40
Statement (55)
    on left: 42 43, on right: 40
Callout_Arg (56)
    on left: 44 45, on right: 43 45
Arguments (57)
    on left: 46 47, on right: 44 45
Type (58)
    on left: 48 49, on right: 5
Literals (59)
    on left: 50 51, on right: 46


State 0

    0 $accept: . Program $end

    START  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: START . PROG_ID LBRACE Main RBRACE

    PROG_ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: START PROG_ID . LBRACE Main RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: START PROG_ID LBRACE . Main RBRACE

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7

    $default  reduce using rule 4 (Field_Declarations)

    Main                go to state 8
    Field_Declarations  go to state 9
    Field_Declaration   go to state 10
    Type                go to state 11


State 6

   49 Type: BOOLEAN .

    $default  reduce using rule 49 (Type)


State 7

   48 Type: INT .

    $default  reduce using rule 48 (Type)


State 8

    1 Program: START PROG_ID LBRACE Main . RBRACE

    RBRACE  shift, and go to state 12


State 9

    2 Main: Field_Declarations . Statements

    IDENTIFIER  shift, and go to state 13
    CALLOUT     shift, and go to state 14

    $default  reduce using rule 41 (Statements)

    Location    go to state 15
    Statements  go to state 16
    Statement   go to state 17


State 10

    3 Field_Declarations: Field_Declaration . SEMI_COLON Field_Declarations

    SEMI_COLON  shift, and go to state 18


State 11

    5 Field_Declaration: Type . Def

    IDENTIFIER  shift, and go to state 19

    Def  go to state 20


State 12

    1 Program: START PROG_ID LBRACE Main RBRACE .

    $default  reduce using rule 1 (Program)


State 13

    8 Location: IDENTIFIER . TLSQUARE Expression TRSQUARE
    9         | IDENTIFIER .

    TLSQUARE  shift, and go to state 21

    $default  reduce using rule 9 (Location)


State 14

   43 Statement: CALLOUT . TLROUND STRING_LITERAL TCOMMA Callout_Arg TRROUND

    TLROUND  shift, and go to state 22


State 15

   42 Statement: Location . TEQUAL Expression_Right

    TEQUAL  shift, and go to state 23


State 16

    2 Main: Field_Declarations Statements .

    $default  reduce using rule 2 (Main)


State 17

   40 Statements: Statement . SEMI_COLON Statements

    SEMI_COLON  shift, and go to state 24


State 18

    3 Field_Declarations: Field_Declaration SEMI_COLON . Field_Declarations

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7

    $default  reduce using rule 4 (Field_Declarations)

    Field_Declarations  go to state 25
    Field_Declaration   go to state 10
    Type                go to state 11


State 19

    6 Def: IDENTIFIER . TLSQUARE InExpression TRSQUARE
    7    | IDENTIFIER .

    TLSQUARE  shift, and go to state 26

    $default  reduce using rule 7 (Def)


State 20

    5 Field_Declaration: Type Def .

    $default  reduce using rule 5 (Field_Declaration)


State 21

    8 Location: IDENTIFIER TLSQUARE . Expression TRSQUARE

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 29


State 22

   43 Statement: CALLOUT TLROUND . STRING_LITERAL TCOMMA Callout_Arg TRROUND

    STRING_LITERAL  shift, and go to state 30


State 23

   42 Statement: Location TEQUAL . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 37
    Bool              go to state 38


State 24

   40 Statements: Statement SEMI_COLON . Statements

    IDENTIFIER  shift, and go to state 13
    CALLOUT     shift, and go to state 14

    $default  reduce using rule 41 (Statements)

    Location    go to state 15
    Statements  go to state 39
    Statement   go to state 17


State 25

    3 Field_Declarations: Field_Declaration SEMI_COLON Field_Declarations .

    $default  reduce using rule 3 (Field_Declarations)


State 26

    6 Def: IDENTIFIER TLSQUARE . InExpression TRSQUARE

    T_INT  shift, and go to state 40

    InExpression  go to state 41


State 27

   22 Expression: T_INT .

    $default  reduce using rule 22 (Expression)


State 28

   21 Expression: Def .

    $default  reduce using rule 21 (Expression)


State 29

    8 Location: IDENTIFIER TLSQUARE Expression . TRSQUARE
   12 Expression: Expression . TPLUS $@1 Expression
   14           | Expression . TMINUS $@2 Expression
   16           | Expression . TMUL $@3 Expression
   18           | Expression . TDIV $@4 Expression
   20           | Expression . MOD $@5 Expression

    TPLUS     shift, and go to state 42
    TMINUS    shift, and go to state 43
    TMUL      shift, and go to state 44
    TDIV      shift, and go to state 45
    MOD       shift, and go to state 46
    TRSQUARE  shift, and go to state 47


State 30

   43 Statement: CALLOUT TLROUND STRING_LITERAL . TCOMMA Callout_Arg TRROUND

    TCOMMA  shift, and go to state 48


State 31

   37 Expression_Right: T_INT .

    $default  reduce using rule 37 (Expression_Right)


State 32

   24 Expression_Right: TMINUS . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 49
    Bool              go to state 38


State 33

   23 Expression_Right: NOT . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 50
    Bool              go to state 38


State 34

   39 Bool: FALSE .

    $default  reduce using rule 39 (Bool)


State 35

   38 Bool: TRUE .

    $default  reduce using rule 38 (Bool)


State 36

   35 Expression_Right: Location .

    $default  reduce using rule 35 (Expression_Right)


State 37

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right
   42 Statement: Location TEQUAL Expression_Right .

    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    MOD     shift, and go to state 55

    $default  reduce using rule 42 (Statement)


State 38

   36 Expression_Right: Bool .

    $default  reduce using rule 36 (Expression_Right)


State 39

   40 Statements: Statement SEMI_COLON Statements .

    $default  reduce using rule 40 (Statements)


State 40

   10 InExpression: T_INT .

    $default  reduce using rule 10 (InExpression)


State 41

    6 Def: IDENTIFIER TLSQUARE InExpression . TRSQUARE

    TRSQUARE  shift, and go to state 56


State 42

   12 Expression: Expression TPLUS . $@1 Expression

    $default  reduce using rule 11 ($@1)

    $@1  go to state 57


State 43

   14 Expression: Expression TMINUS . $@2 Expression

    $default  reduce using rule 13 ($@2)

    $@2  go to state 58


State 44

   16 Expression: Expression TMUL . $@3 Expression

    $default  reduce using rule 15 ($@3)

    $@3  go to state 59


State 45

   18 Expression: Expression TDIV . $@4 Expression

    $default  reduce using rule 17 ($@4)

    $@4  go to state 60


State 46

   20 Expression: Expression MOD . $@5 Expression

    $default  reduce using rule 19 ($@5)

    $@5  go to state 61


State 47

    8 Location: IDENTIFIER TLSQUARE Expression TRSQUARE .

    $default  reduce using rule 8 (Location)


State 48

   43 Statement: CALLOUT TLROUND STRING_LITERAL TCOMMA . Callout_Arg TRROUND

    T_INT           shift, and go to state 31
    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 62
    TMINUS          shift, and go to state 32
    NOT             shift, and go to state 33
    FALSE           shift, and go to state 34
    TRUE            shift, and go to state 35
    CHAR_LITERAL    shift, and go to state 63

    Location          go to state 36
    Expression_Right  go to state 64
    Bool              go to state 38
    Callout_Arg       go to state 65
    Arguments         go to state 66
    Literals          go to state 67


State 49

   24 Expression_Right: TMINUS Expression_Right .
   26                 | Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right

    TMUL  shift, and go to state 53
    TDIV  shift, and go to state 54
    MOD   shift, and go to state 55

    $default  reduce using rule 24 (Expression_Right)


State 50

   23 Expression_Right: NOT Expression_Right .
   26                 | Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right

    $default  reduce using rule 23 (Expression_Right)


State 51

   26 Expression_Right: Expression_Right TPLUS . $@6 Expression_Right

    $default  reduce using rule 25 ($@6)

    $@6  go to state 68


State 52

   28 Expression_Right: Expression_Right TMINUS . $@7 Expression_Right

    $default  reduce using rule 27 ($@7)

    $@7  go to state 69


State 53

   30 Expression_Right: Expression_Right TMUL . $@8 Expression_Right

    $default  reduce using rule 29 ($@8)

    $@8  go to state 70


State 54

   32 Expression_Right: Expression_Right TDIV . $@9 Expression_Right

    $default  reduce using rule 31 ($@9)

    $@9  go to state 71


State 55

   34 Expression_Right: Expression_Right MOD . $@10 Expression_Right

    $default  reduce using rule 33 ($@10)

    $@10  go to state 72


State 56

    6 Def: IDENTIFIER TLSQUARE InExpression TRSQUARE .

    $default  reduce using rule 6 (Def)


State 57

   12 Expression: Expression TPLUS $@1 . Expression

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 73


State 58

   14 Expression: Expression TMINUS $@2 . Expression

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 74


State 59

   16 Expression: Expression TMUL $@3 . Expression

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 75


State 60

   18 Expression: Expression TDIV $@4 . Expression

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 76


State 61

   20 Expression: Expression MOD $@5 . Expression

    T_INT       shift, and go to state 27
    IDENTIFIER  shift, and go to state 19

    Def         go to state 28
    Expression  go to state 77


State 62

   51 Literals: STRING_LITERAL .

    $default  reduce using rule 51 (Literals)


State 63

   50 Literals: CHAR_LITERAL .

    $default  reduce using rule 50 (Literals)


State 64

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right
   47 Arguments: Expression_Right .

    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    MOD     shift, and go to state 55

    $default  reduce using rule 47 (Arguments)


State 65

   43 Statement: CALLOUT TLROUND STRING_LITERAL TCOMMA Callout_Arg . TRROUND

    TRROUND  shift, and go to state 78


State 66

   44 Callout_Arg: Arguments .
   45            | Arguments . TCOMMA Callout_Arg

    TCOMMA  shift, and go to state 79

    $default  reduce using rule 44 (Callout_Arg)


State 67

   46 Arguments: Literals .

    $default  reduce using rule 46 (Arguments)


State 68

   26 Expression_Right: Expression_Right TPLUS $@6 . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 80
    Bool              go to state 38


State 69

   28 Expression_Right: Expression_Right TMINUS $@7 . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 81
    Bool              go to state 38


State 70

   30 Expression_Right: Expression_Right TMUL $@8 . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 82
    Bool              go to state 38


State 71

   32 Expression_Right: Expression_Right TDIV $@9 . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 83
    Bool              go to state 38


State 72

   34 Expression_Right: Expression_Right MOD $@10 . Expression_Right

    T_INT       shift, and go to state 31
    IDENTIFIER  shift, and go to state 13
    TMINUS      shift, and go to state 32
    NOT         shift, and go to state 33
    FALSE       shift, and go to state 34
    TRUE        shift, and go to state 35

    Location          go to state 36
    Expression_Right  go to state 84
    Bool              go to state 38


State 73

   12 Expression: Expression . TPLUS $@1 Expression
   12           | Expression TPLUS $@1 Expression .
   14           | Expression . TMINUS $@2 Expression
   16           | Expression . TMUL $@3 Expression
   18           | Expression . TDIV $@4 Expression
   20           | Expression . MOD $@5 Expression

    TMUL  shift, and go to state 44
    TDIV  shift, and go to state 45
    MOD   shift, and go to state 46

    $default  reduce using rule 12 (Expression)


State 74

   12 Expression: Expression . TPLUS $@1 Expression
   14           | Expression . TMINUS $@2 Expression
   14           | Expression TMINUS $@2 Expression .
   16           | Expression . TMUL $@3 Expression
   18           | Expression . TDIV $@4 Expression
   20           | Expression . MOD $@5 Expression

    TMUL  shift, and go to state 44
    TDIV  shift, and go to state 45
    MOD   shift, and go to state 46

    $default  reduce using rule 14 (Expression)


State 75

   12 Expression: Expression . TPLUS $@1 Expression
   14           | Expression . TMINUS $@2 Expression
   16           | Expression . TMUL $@3 Expression
   16           | Expression TMUL $@3 Expression .
   18           | Expression . TDIV $@4 Expression
   20           | Expression . MOD $@5 Expression

    $default  reduce using rule 16 (Expression)


State 76

   12 Expression: Expression . TPLUS $@1 Expression
   14           | Expression . TMINUS $@2 Expression
   16           | Expression . TMUL $@3 Expression
   18           | Expression . TDIV $@4 Expression
   18           | Expression TDIV $@4 Expression .
   20           | Expression . MOD $@5 Expression

    $default  reduce using rule 18 (Expression)


State 77

   12 Expression: Expression . TPLUS $@1 Expression
   14           | Expression . TMINUS $@2 Expression
   16           | Expression . TMUL $@3 Expression
   18           | Expression . TDIV $@4 Expression
   20           | Expression . MOD $@5 Expression
   20           | Expression MOD $@5 Expression .

    $default  reduce using rule 20 (Expression)


State 78

   43 Statement: CALLOUT TLROUND STRING_LITERAL TCOMMA Callout_Arg TRROUND .

    $default  reduce using rule 43 (Statement)


State 79

   45 Callout_Arg: Arguments TCOMMA . Callout_Arg

    T_INT           shift, and go to state 31
    IDENTIFIER      shift, and go to state 13
    STRING_LITERAL  shift, and go to state 62
    TMINUS          shift, and go to state 32
    NOT             shift, and go to state 33
    FALSE           shift, and go to state 34
    TRUE            shift, and go to state 35
    CHAR_LITERAL    shift, and go to state 63

    Location          go to state 36
    Expression_Right  go to state 64
    Bool              go to state 38
    Callout_Arg       go to state 85
    Arguments         go to state 66
    Literals          go to state 67


State 80

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   26                 | Expression_Right TPLUS $@6 Expression_Right .
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right

    TMUL  shift, and go to state 53
    TDIV  shift, and go to state 54
    MOD   shift, and go to state 55

    $default  reduce using rule 26 (Expression_Right)


State 81

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   28                 | Expression_Right TMINUS $@7 Expression_Right .
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right

    TMUL  shift, and go to state 53
    TDIV  shift, and go to state 54
    MOD   shift, and go to state 55

    $default  reduce using rule 28 (Expression_Right)


State 82

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   30                 | Expression_Right TMUL $@8 Expression_Right .
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right

    $default  reduce using rule 30 (Expression_Right)


State 83

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   32                 | Expression_Right TDIV $@9 Expression_Right .
   34                 | Expression_Right . MOD $@10 Expression_Right

    $default  reduce using rule 32 (Expression_Right)


State 84

   26 Expression_Right: Expression_Right . TPLUS $@6 Expression_Right
   28                 | Expression_Right . TMINUS $@7 Expression_Right
   30                 | Expression_Right . TMUL $@8 Expression_Right
   32                 | Expression_Right . TDIV $@9 Expression_Right
   34                 | Expression_Right . MOD $@10 Expression_Right
   34                 | Expression_Right MOD $@10 Expression_Right .

    $default  reduce using rule 34 (Expression_Right)


State 85

   45 Callout_Arg: Arguments TCOMMA Callout_Arg .

    $default  reduce using rule 45 (Callout_Arg)
